@@ -1,3 +1,9 @@
+2016-11-05  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (sformats[]): Add fractional seconds to four more
+	datetimes; (isLengthEightAndAllDigits): Another refinement;
+	(setDebug): add simple debug routine
+
 2016-11-04  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/anytime.cpp (convertToTime): Add logic to cope with the extended
